--- a/src/training/index.html
+++ b/src/training/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Handpose model training</title>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script> -->
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+
+    <script defer src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="../../styles/index.css" />
+    <title>Handpose Classification model trainer</title>
   </head>
+
   <body>
-    training on gathered data
+    <div id="flex">
+      <h3>Handpose Classification model trainer</h3>
+    </div>
+    <div></div>
+    <div>
+      <p id="status">Training, please wait...</p>
+      <button id="saveModel">Save Model</button>
+    </div>
   </body>
 </html>
