--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
         <button id="explainerBTN" disabled>Loading...</button>
     </div>
     <div id="question" hidden>
-      <h2>Question</h2>
+      <h2 id="questionText">Question</h2>
     </div>
-    <div id="answers" hidden>
-      <div id="clockDisplay">clock</div>
-      <div id="answerOne">One</div>
-      <div id="answerTwo">Two</div>
-      <div id="answerThree">Three</div>
-      <div id="answerFour">Four</div>
+    <div id="answersDisplay" hidden>
+      <h2 id="answerOne" hidden>One</h2>
+      <h2 id="answerTwo" hidden>Two</h2>
+      <h2 id="answerThree" hidden>Three</h2>
+      <h2 id="answerFour" hidden>Four</h2>
     </div>
     <div id="classifierResult" hidden>
       <div id="prediction">
