--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     </div>
     <div id="explainer">
       <h2 id="explainerTitle">Welcome to Handpose Millionaires.</h1>
-        <h3>Handpose Millionaires is a trivia game, using <a href="https://the-trivia-api.com/">'The Trivia API'</a></h3>
-        <p id="explainerParagraph">in this trivia game you use your hands to answer the questions! <br/>
+        <h3 id="explainerCredits">Handpose Millionaires is a trivia game, using <a href="https://the-trivia-api.com/">'The Trivia API'</a></h3>
+        <h4 id="explainerParagraph">in this trivia game you use your hands to answer the questions! <br/>
           So please make sure your camera is turned on, and that this site has been granted permissions to use the camera. <br/>
           But dont worry, all the image processing and pose recognition is happening locally in your browser.<br/> So nothing is send to a server!
-        </p>
+        </h4>
         <button id="explainerBTN" disabled>Loading...</button>
     </div>
     <div id="question" hidden>
